--- a/parts/user_edit.jade
+++ b/parts/user_edit.jade
@@ -65,6 +65,7 @@ template(name='user_edit_account')
             +password_edit
         .column
             +text_edit k='first_name' l='first name' d=true
+            div
             +text_edit k='last_name' l='last name' d=true
             .ui.header 
                 i.envelope.outline.icon
