--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -1,25 +1,25 @@
 template(name='nav')
-    // a.icon.ui.big.circular.icon.button.zoomer(href='/')
+    // a.icon.ui.big.circular.icon.button(href='/')
     .ui.fluid.attached.borderless.inverted.menu.topnav
-        a.icon.header.item.zoomer.pointer.toggle_leftbar
+        a.icon.header.item.pointer.toggle_leftbar
             i.bars.large.grey.icon
         if connected
-            a.icon.item.zoomer(href='/')
+            a.icon.item(href='/')
                 i.big.yin.yang.icon
-            a.icon.item.zoomer(href='/stack')
+            a.icon.item(href='/stack')
                 i.big.stack.exchange.icon
-            a.icon.item.zoomer(href='/shop')
+            a.icon.item(href='/shop')
                 i.big.shop.icon
-            a.icon.item.zoomer(href='/requests')
+            a.icon.item(href='/requests')
                 i.big.hand.holding.icon
-            a.icon.item.zoomer(href='/events')
+            a.icon.item(href='/events')
                 i.big.calendar.icon
-            .ui.search.item.zoomer
-                .ui.input
+            .ui.search.item
+                .ui.transparent.inverted.input
                     input(type='text')
-            // a.icon.item.zoomer(href='/reddit')
+            // a.icon.item(href='/reddit')
             //     i.big.reddit.icon
-            // a.icon.item.zoomer(href='/wikipedia')
+            // a.icon.item(href='/wikipedia')
             //     i.big.wikipedia.icon
         unless connected
             .item
@@ -28,40 +28,40 @@ template(name='nav')
         .right.menu
             if currentUser
                 if connected
-                    a.icon.zoomer.pointer.item.add(title='add')
+                    a.icon.pointer.item.add(title='add')
                         i.large.plus.icon
                 if currentUser
-                    a.pointer.zoomer.icon.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
+                    a.pointer.icon.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
                         i.large.users.icon
                     if connected
                         if unread_count
-                            a.pointer.zoomer.item.alerts(href="#" class=alert_toggle_class)
+                            a.pointer.item.alerts(href="#" class=alert_toggle_class)
                                 i.large.bell.icon
                                 if unread_count
                                     |#{unread_count}
                         else
-                            // a.icon.pointer.zoomer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                            a.icon.pointer.zoomer.item(href="/inbox")
+                            // a.icon.pointer.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                            a.icon.pointer.item(href="/inbox")
                                 i.large.outline.bell.icon
-                a.icon.pointer.zoomer.item(href="/chat" title='chat') 
+                a.icon.pointer.item(href="/chat" title='chat') 
                     i.chat.outline.large.icon
                 // a.icon.pointer.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
                     
             if currentUser
-                a.large.pointer.zoomer.item(href="/u/#{currentUser.username}" )
+                a.large.pointer.item(href="/u/#{currentUser.username}" )
                     //- i.large.user.large.icon
                     // |{{money_format currentUser.points}}c
                     |#{currentUser.points}p
                     |&nbsp;
                     if currentUser.profile_image_id
-                        img.ui.avatar.zoomer.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                        img.ui.avatar.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                     else 
-                        i.large.user.zoomer.large.icon
+                        i.large.user.large.icon
                     strong.mobile.hidden #{currentUser.username}
-                a.icon.large.item.zoomer.toggle_rightbar
+                a.icon.large.item.toggle_rightbar
                     i.bars.large.grey.icon
             else
-                a.pointer.zoomer.item(href="/login" title='login')
+                a.pointer.item(href="/login" title='login')
                     i.large.sign.in.icon
                     // |enter
     if skv_is 'viewing_alerts' true
@@ -196,42 +196,42 @@ template(name='rightbar')
         // a.item.toggle_rightbar(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_layout'}}")
         //     img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
         //     |#{currentUser.name}
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
             | dashboard (#{currentUser.points}p)
             i.large.dashboard.icon
         
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/about" class="{{isActiveRoute 'user_about'}}")
             | about
             i.large.info.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kin" class="{{isActiveRoute 'kin'}}")
             | #{currentUser.total_credit_amount}p received
             i.large.chevron.down.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/kout" class="{{isActiveRoute 'user_debits'}}")
             | #{currentUser.total_debit_amount}k out
             i.large.chevron.up.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/events" class="{{isActiveRoute 'user_events'}}")
             | events
             i.large.calendar.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/requests" class="{{isActiveRoute 'user_requests'}}")
             | requests
             i.large.concierge.bell.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/orders" class="{{isActiveRoute 'user_orders'}}")
             | orders
             i.large.cart.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
             | offers
             i.large.hand.holding.heart.icon
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
             | chat
             i.chat.icon
         .ui.divider
-        a.zoomer.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
             i.cog.large.icon
             |settings
-        a.zoomer.item.toggle_nightmode.toggle_rightbar(href="#")
+        a.item.toggle_nightmode.toggle_rightbar(href="#")
             i.lightbulb.large.icon
             |dark mode
-        a.zoomer.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
+        a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
             |logout
             if is_logging_out
                 i.refresh.loading.icon
@@ -255,25 +255,25 @@ template(name='leftbar')
             i.cog.icon
             | settings
         .divider
-        a.item.zoomer.toggle_leftbar(href='/web' class="{{isActivePath '/web'}}")
+        a.item.toggle_leftbar(href='/web' class="{{isActivePath '/web'}}")
             i.large.globe.grey.icon
             |web
-        a.item.zoomer.toggle_leftbar(href='/events' class="{{isActivePath '/events'}}")
+        a.item.toggle_leftbar(href='/events' class="{{isActivePath '/events'}}")
             i.large.calendar.grey.icon
             |events
-        a.item.zoomer.toggle_leftbar(href='/reddit' class="{{isActivePath '/reddit'}}")
+        a.item.toggle_leftbar(href='/reddit' class="{{isActivePath '/reddit'}}")
             i.large.reddit.grey.icon
             |reddit
-        a.item.zoomer.toggle_leftbar(href='/stack' class="{{isActivePath '/stack'}}")
+        a.item.toggle_leftbar(href='/stack' class="{{isActivePath '/stack'}}")
             i.large.stack.exchange.grey.icon
             |stackexchange
-        a.item.zoomer.toggle_leftbar(href='/wikipedia' class="{{isActivePath '/wikipedia'}}")
+        a.item.toggle_leftbar(href='/wikipedia' class="{{isActivePath '/wikipedia'}}")
             i.large.wikipedia.grey.icon
             |wikipedia
-        a.item.zoomer.toggle_leftbar(href='/questions' class="{{isActivePath '/questions'}}")
+        a.item.toggle_leftbar(href='/questions' class="{{isActivePath '/questions'}}")
             i.large.question.grey.icon
             |questions
-        a.item.zoomer.toggle_leftbar(href='/m/model' class="{{isActivePath '/m/model'}}")
+        a.item.toggle_leftbar(href='/m/model' class="{{isActivePath '/m/model'}}")
             i.large.database.grey.icon
             |database
         a.item.toggle_sidebar.zoom(href="/m/meal" class="{{isActivePath '/m/meal'}}")
