--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -46,7 +46,7 @@ template(name='dao')
                 +skve k='view_mode' v='stack' l='stack' i='stackoverflow'
                 +skve k='view_mode' v='image' l='image' i='image'
                 +skve k='view_mode' v='github' l='github' i='github'
-                // +skve k='view_mode' v='porn' l='porn' i='mercury'
+                +skve k='view_mode' v='porn' l='porn' i='mercury'
                 +skve k='view_mode' v='video' l='youtube' i='youtube'
                 // div
                 if skv_is 'view_mode' 'stack'
@@ -139,6 +139,7 @@ template(name='dao')
                 +skve k='main_section' v='reddit' l='reddit' i='reddit'
                 +skve k='main_section' v='wikipedia' l='wikipedia' i='wikipedia'
                 +skve k='main_section' v='stack' l='stack' i='stackoverflow'
+                +skve k='main_section' v='porn' l='porn' i='mercury'
                 // +skve k='main_section' v='shop' l='shop' i='shop'
                 // +skve k='main_section' v='chat' l='chat' i='chat'
                 // +skve k='main_section' v='groups' l='groups' i='groups'
@@ -265,6 +266,9 @@ template(name='dao')
                                 each reddit_docs
                                     +reddit_doc
                         
+                    else if skv_is 'main_section' 'porn'
+                        each ph_docs
+                            +vid_card
                     else if skv_is 'main_section' 'search_doc'
                         if search_doc
                             .ui.header #{search_doc._when} when
