--- a/parts/client/question.jade
+++ b/parts/client/question.jade
@@ -6,7 +6,7 @@ template(name='question_view')
             .row 
                 .sixteen.wide.center.aligned.column
                     if is_editing
-                        +text_edit k='title' l='title' input_class='fluid large' d=true
+                        +text_edit k='title' l='title' input_class='fluid large' d=1
                     else
                         .ui.header(class=question_header_class) #{title}
             .row 
@@ -35,7 +35,7 @@ template(name='question_view')
                         img.ui.pointer.rounded.inset.image(src=image_url class=currentUser.invert_class)
                 
                     if youtube_id
-                        +youtube_view k='youtube_id' d=true
+                        +youtube_view k='youtube_id' d=1
                     .f12
                         |!{body}
                     if kv_is 'question_type' 'multiple_choice'
@@ -128,7 +128,7 @@ template(name='answer_segment')
             +sbt k='is_editing' i='pencil'
             +remove_button
         if session is_editing
-            +text_edit k='title' d=true
+            +text_edit k='title' d=1
         .ui.label #{choice_num}
         .ui.label #{boolean_choice}
         +author_block
@@ -149,4 +149,4 @@ template(name='question_bounty')
         if can_edit
             +sbt k='editing_mode' l='edit'
         if session_is 'editing_mode'
-            +number_edit k='amount' d=true
+            +number_edit k='amount' d=1
