--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -392,7 +392,7 @@ a.title, #title {
 }
 
 .invert{
-  /*filter: invert(1) !important; */
+  filter: invert(1) !important; 
 }
 .left.floated{
     margin:3px !important;
