--- a/parts/dashboard.jade
+++ b/parts/dashboard.jade
@@ -1,60 +1,12 @@
 template(name='user_dashboard')
-    // +user_bookmarks_small
+    +user_bookmarks_small
     // +user_about
     // .ui.hidden.divider
-    .ui.stackable.four.column.grid
+    .ui.stackable.three.column.grid
         .column
-            .ui.inline.header 
-                +i n='inbox'
-                |#{total_credit_amount}p
-                |received
-                .ui.basic.label #{credit_count} credits
-                    | ##{global_credit_count_rank}
-            .scrolling
-                each user_credits
-                    .ui.segment
-                        if author.profile_image_id
-                            img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        .content
-                            .header
-                                strong #{amount}pt 
-                                |from 
-                                a(href="/u/#{author.username}")
-                                    |#{author.username}
-                            .description
-                                a(href="/debit/#{_id}/view")
-                                    |#{when}
-                        .content
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.basic.label #{this}
+            +user_credits_small
         .column
-            .ui.inline.spaced.header 
-                +icolor n='filled-sent' 
-                |#{total_send_amount}p
-                |sent
-                small(title='send count') (#{send_count}x)
-                    .ui.label ##{global_send_count_rank}
-            div
-            .scrolling
-                each user_debits
-                    .ui.segment
-                        a(href="/debit/#{_id}/view")
-                            if recipient.profile_image_id
-                                img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                            .header
-                                strong #{amount}pt
-                                |#{when}
-                                | to 
-                                a(href="/u/#{recipient.username}")
-                                    |#{recipient.username}
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.label #{this}
-                                if is_admin
-                                    +remove_button
+            +user_debits_small
         .column
             .ui.header 
                 // i.hand.holding.heart.icon
@@ -81,19 +33,19 @@ template(name='user_dashboard')
                                 |#{_author.username}
                                 |#{description}
                                 |#{when}
-    .ui.stackable.padded.grid
-        .four.wide.column
+        .column
+            +user_groups_small
             +user_rentals_small
             +user_reservations_small
             +user_questions_small
-        .four.wide.column
+        .column
             .ui.comments
                 .ui.icon.fluid.inverted.large.input
                     i.plus.icon
                     input.add_post(type='text' placeholder='add post...')
                 each latest_posts
                     +post_segment
-        .four.wide.column
+        .column
             +skve k='profile_section' v='dashboard' l='dashboard' i='dashboard'
             // +skve k='profile_section' v='friends' l='friends' i='groups'
             +skve k='profile_section' v='finance' l='finance' i='money'
@@ -102,7 +54,6 @@ template(name='user_dashboard')
             +skve k='profile_section' v='questions' l='questions' i='faq'
             +skve k='profile_section' v='answers' l='answers' i='rss'
             +skve k='profile_section' v='overlap' l='overlap' i='exchange'
-            +skve k='profile_section' v='privacy' l='privacy' i='lock'
             +skve k='profile_section' v='debits' l='debits' i='initiate-money-transfer'
             +skve k='profile_section' v='credits' l='credits' i='deposit'
             if skv_is 'profile_section' 'dashboard'
@@ -113,14 +64,11 @@ template(name='user_dashboard')
                 +authored_overlap
             else if skv_is 'profile_section' 'debits'
                 +user_debits
-            else if skv_is 'profile_section' 'privacy'
-                +edit_privacy
             else if skv_is 'profile_section' 'alerts'
                 +alerts
             else if skv_is 'profile_section' 'finance'
                 .ui.header finance
-                    
-        .four.wide.column
+        .column
             .ui.segment
                 .ui.header 
                     |quick send
@@ -143,8 +91,8 @@ template(name='user_dashboard')
                     i.plus.icon
                 if asking_question
                     with question_asking
-                        +text_edit k='title' d=true
-                        +number_edit k='bounty' d=true 
+                        +text_edit k='title' d=1
+                        +number_edit k='bounty' d=1 
                         .ui.button.save_question
                             i.checkmark.icon
                         +remove_button
@@ -165,4 +113,65 @@ template(name='user_dashboard')
                             .header #{body}
                             .meta #{_when}
            
+template(name='user_groups_small')
+    a.ui.header(href="/groups")
+        +i n='groups'
+        |groups
+    .ui.list
+        each groups
+            a.item(href="/group/#{_id}/view") #{title}
+            
+template(name='user_credits_small')
+    .ui.inline.header 
+        +i n='inbox'
+        |#{total_credit_amount}p
+        |received
+        .ui.basic.label #{credit_count} credits
+            | ##{global_credit_count_rank}
+    .scrolling
+        each user_credits
+            .ui.segment
+                if author.profile_image_id
+                    img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                .content
+                    .header
+                        strong #{amount}pt 
+                        |from 
+                        a(href="/u/#{author.username}")
+                            |#{author.username}
+                    .description
+                        a(href="/debit/#{_id}/view")
+                            |#{when}
+                .content
+                    .description
+                        |#{description}
+                        each tags
+                            .ui.mini.basic.label #{this}
            
+           
+template(name='user_debits_small')
+    .ui.inline.spaced.header 
+        +icolor n='filled-sent' 
+        |#{total_send_amount}p
+        |sent
+        small(title='send count') (#{send_count}x)
+            .ui.label ##{global_send_count_rank}
+    div
+    .scrolling
+        each user_debits
+            .ui.segment
+                a(href="/debit/#{_id}/view")
+                    if recipient.profile_image_id
+                        img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                    .header
+                        strong #{amount}pt
+                        |#{when}
+                        | to 
+                        a(href="/u/#{recipient.username}")
+                            |#{recipient.username}
+                    .description
+                        |#{description}
+                        each tags
+                            .ui.mini.label #{this}
+                        if is_admin
+                            +remove_button
