--- a/parts/question_edit.jade
+++ b/parts/question_edit.jade
@@ -9,15 +9,15 @@ template(name='question_edit')
                         small edit question
                         // |#{title}
                 .twelve.wide.column
-                    +text_edit k='title' l='title' input_class='fluid large' d=true
+                    +text_edit k='title' l='title' input_class='fluid large' d=1
             .row 
                 .five.wide.column
-                    +boolean_edit k='published' l='published' d=true
+                    +boolean_edit k='published' l='published' d=1
                     // div
-                    +boolean_edit k='has_image' l='image' d=true
+                    +boolean_edit k='has_image' l='image' d=1
                     if has_image
-                        +image_edit k='image_id' l='image' d=true
-                        +text_edit k='image_url' l='image link' d=true
+                        +image_edit k='image_id' l='image' d=1
+                        +text_edit k='image_url' l='image link' d=1
                     .ui.small.header question type
                     +kve k='question_type' v='boolean' l='boolean' i='toggle on'
                     +kve k='question_type' v='multiple_choice' l='multiple choice' i='list'
@@ -26,13 +26,13 @@ template(name='question_edit')
                     if kv_is 'question_type' 'multiple_choice'
                         .ui.dividing.header multiple choice
                         div
-                        +text_edit k='mc_option_1' l='option 1' d=true
+                        +text_edit k='mc_option_1' l='option 1' d=1
                         div
-                        +text_edit k='mc_option_2' l='option 2' d=true
+                        +text_edit k='mc_option_2' l='option 2' d=1
                         div
-                        +text_edit k='mc_option_3' l='option 3' d=true
+                        +text_edit k='mc_option_3' l='option 3' d=1
                         div
-                        +text_edit k='mc_option_4' l='option 4' d=true
+                        +text_edit k='mc_option_4' l='option 4' d=1
                         
                     if kv_is 'question_type' 'open'
                         .ui.dividing.header open answer
@@ -42,33 +42,33 @@ template(name='question_edit')
                         
                     // +kve k='question_type' v='open' l='open'
                 .ten.wide.column
-                    +boolean_edit k='has_description' l='description' d=true
+                    +boolean_edit k='has_description' l='description' d=1
                     if has_description
-                        +html_edit k='description' l='description' d=true
-                    // +number_edit k='bounty_total' l='total bounty' d=true
+                        +html_edit k='description' l='description' d=1
+                    // +number_edit k='bounty_total' l='total bounty' d=1
                     // div
-                    // +number_edit k='points_per_answer' l='points per answer' d=true
+                    // +number_edit k='points_per_answer' l='points per answer' d=1
                     // div
-                    // +number_edit k='bounties_available' l='bounties available' d=true
+                    // +number_edit k='bounties_available' l='bounties available' d=1
                     // .ui.header subtotal = points/answer*bounties = #{subtotal}pts
                     // div
-                    +boolean_edit k='has_recipient' l='recipient' d=true
+                    +boolean_edit k='has_recipient' l='recipient' d=1
                     if has_recipient
-                        +single_user_edit k='recipient_id' key2='recipient_username' l='recipient' d=true
+                        +single_user_edit k='recipient_id' key2='recipient_username' l='recipient' d=1
                     // div
-                    // +number_edit k='point_amount' l='point amount' d=true
+                    // +number_edit k='point_amount' l='point amount' d=1
                     // div
-                    +boolean_edit k='has_link' l='link' d=true
+                    +boolean_edit k='has_link' l='link' d=1
                     if has_link
-                        +link_edit k='link' l='link' d=true
-                    +boolean_edit k='has_enddate' l='enddate' d=true
+                        +link_edit k='link' l='link' d=1
+                    +boolean_edit k='has_enddate' l='enddate' d=1
                     if has_enddate
-                        +date_edit k='date' l='date' d=true
+                        +date_edit k='date' l='date' d=1
                     // |tag = -1p
                     // div
                     +smart_tagger
-                    +boolean_edit k='has_youtube' l='video' d=true
+                    +boolean_edit k='has_youtube' l='video' d=1
                     if has_youtube
-                        +youtube_edit k='youtube_id' l='youtube id' d=true
+                        +youtube_edit k='youtube_id' l='youtube id' d=1
                     i.remove.link.big.icon.delete_question(title='delete question')
                     
