--- a/parts/user_edit.jade
+++ b/parts/user_edit.jade
@@ -8,7 +8,7 @@ template(name='user_edit_layout')
                 .ui.stackable.padded.grid
                     .row
                         .four.wide.column
-                            .ui.center.aligned.large.inline.header(style="color:#{current_user.theme_color};")
+                            .ui.center.aligned.medium.inline.header(style="color:#{current_user.theme_color};")
                                 i.big.cog.icon(style="color:#{current_user.theme_color};")
                                 | #{current_user.name}
                             .ui.small.inline.header @#{current_user.username}
@@ -16,38 +16,37 @@ template(name='user_edit_layout')
                                 
                             a.ui.big.green.circular.icon.button(href="/u/#{current_user.username}/") 
                                 i.checkmark.big.icon
-                                strong save
                             a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/account" class="{{isActiveRoute 'user_edit_account'}}" title='account') 
                                 i.cog.large.icon 
                                 |account
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/info" class="{{isActiveRoute 'user_edit_info'}}" title='info') 
                                 i.info.large.icon 
                                 |info
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/food" class="{{isActiveRoute 'user_edit_food'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/food" class="{{isActiveRoute 'user_edit_food'}}") 
                                 i.food.large.icon 
                                 |food
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/delivery" class="{{isActiveRoute 'user_edit_delivery'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/delivery" class="{{isActiveRoute 'user_edit_delivery'}}") 
                                 i.truck.large.icon 
                                 |delivery
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/alerts" class="{{isActiveRoute 'user_edit_alerts'}}") 
                                 i.bell.large.icon 
                                 |alerts
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/style" class="{{isActiveRoute 'user_edit_style'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/style" class="{{isActiveRoute 'user_edit_style'}}") 
                                 i.paint.brush.large.icon 
                                 |style
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/genekeys" class="{{isActiveRoute 'user_edit_genekeys'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/genekeys" class="{{isActiveRoute 'user_edit_genekeys'}}") 
                                 i.dna.large.icon 
                                 |genekeys
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/privacy" class="{{isActiveRoute 'user_edit_privacy'}}") 
                                 i.lock.privacy.large.icon 
                                 | privacy
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/badges" class="{{isActiveRoute 'user_edit_badges'}}" title='badges') 
                                 i.certificate.large.icon
                                 |badges
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/membership" class="{{isActiveRoute 'user_edit_membership'}}" title='membership') 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/membership" class="{{isActiveRoute 'user_edit_membership'}}" title='membership') 
                                 i.shield.large.icon
                                 | membership
-                            a.ui.large.basic.circular.button(href="/u/#{current_user.username}/edit/tribes" class="{{isActiveRoute 'user_edit_tribes'}}") 
+                            a.ui.basic.circular.button(href="/u/#{current_user.username}/edit/tribes" class="{{isActiveRoute 'user_edit_tribes'}}") 
                                 i.fire.large.icon 
                                 |tribes
                         .twelve.wide.column
@@ -60,13 +59,13 @@ template(name='user_edit_account')
         |account
     .ui.two.column.stackable.grid
         .column
-            +image_edit k='profile_image_id' i='picture' title='profile image' d=true
-            +image_edit k='avatar_image_id' i='picture' title='avatar image' d=true
+            +image_edit k='profile_image_id' i='picture' title='profile image' d=1
+            +image_edit k='avatar_image_id' i='picture' title='avatar image' d=1
             +password_edit
         .column
-            +text_edit k='first_name' l='first name' d=true
+            +text_edit k='first_name' l='first name' d=1
             div
-            +text_edit k='last_name' l='last name' d=true
+            +text_edit k='last_name' l='last name' d=1
             .ui.header 
                 i.envelope.outline.icon
                 |emails
@@ -75,16 +74,16 @@ template(name='user_edit_account')
                 .ui.segment
                     i.code.icon
                     +username_edit
-                    +boolean_edit k='disabled' l='disabled' d=true
-                    +multi_user_edit k='user_representatives' l='user representatives' d=true
+                    +boolean_edit k='disabled' l='disabled' d=1
+                    +multi_user_edit k='user_representatives' l='user representatives' d=1
                     div
                     with current_user
                         .ui.button.remove_user 
                             i.remove.icon
                             |delete user
             .spacer
-            +phone_edit k='phone' l='phone' i='phone' d=true
-
+            +phone_edit k='phone' l='phone' i='phone' d=1
+            +boolean_edit k='nsfw' l='nsfw' i='porn' d=1
             //- +phone_editor
     
 
@@ -106,13 +105,13 @@ template(name='user_edit_style')
         i.paint.brush.icon
         | styles
     .ui.header nav color
-    +text_edit k='theme_color' l='theme color' d=true
+    +text_edit k='theme_color' l='theme color' d=1
     a.ui.big.button(href='https://www.w3schools.com/cssref/css_colors.asp' target='_window')
         i.external.icon
         |color list
     div
-    +user_key_value_edit k='invert_class' v='invert' l='invert on' d=true
-    +user_key_value_edit k='invert_class' v='' l='invert off' d=true
+    +kve k='invert_class' v='invert' l='invert on' d=1
+    +kve k='invert_class' v='' l='invert off' d=1
 
 template(name='user_edit_privacy')
     .ui.header
@@ -234,7 +233,7 @@ template(name='user_edit_genekeys')
     .ui.grid 
         .row 
             .sixteen.wide.column
-                +link_edit k='genekeys_link' l='report url' d=true
+                +link_edit k='genekeys_link' l='report url' d=1
                 .ui.segment
                     a.ui.button(href="https://genekeys.com/" target='_window') 
                         |1) get gene keys pdf report here (toggle everything)
@@ -244,12 +243,12 @@ template(name='user_edit_genekeys')
                         |3) upload
                     .ui.stackable.three.column.grid
                         .column
-                            +image_edit k='gene1' l='gene keys 1' i='dna' d=true
+                            +image_edit k='gene1' l='gene keys 1' i='dna' d=1
                         .column
-                            +image_edit k='gene2' l='gene keys 2' i='dna' d=true
+                            +image_edit k='gene2' l='gene keys 2' i='dna' d=1
                         .column
-                            +image_edit k='gene3' l='gene keys 3' i='dna' d=true
-                +html_edit k='genekeys_report' l='report' d=true
+                            +image_edit k='gene3' l='gene keys 3' i='dna' d=1
+                +html_edit k='genekeys_report' l='report' d=1
 
 
 template(name='user_edit_food')
@@ -261,9 +260,9 @@ template(name='user_edit_food')
                     | food
         .row 
             .sixteen.wide.column
-                +array_edit k='allergens' l='allergens' d=true
-                +array_edit k='food_likes' l='food likes' d=true
-                +array_edit k='food_dislikes' l='food dislikes' d=true
+                +array_edit k='allergens' l='allergens' d=1
+                +array_edit k='food_likes' l='food likes' d=1
+                +array_edit k='food_dislikes' l='food dislikes' d=1
                 div
                 .ui.big.green.button.buy_ethel_tiffen
                     |pay $11 for an Ethel tiffen
@@ -284,18 +283,18 @@ template(name='food_order')
         .ui.header $#{charge.result.amount}
         if can_edit 
             unless submitted
-                +date_edit k='date' l='date' d=true
-                +text_edit k='notes' l='notes' d=true
-                +key_value_edit k='tiffen_type' v='meat' d=true
-                +key_value_edit k='tiffen_type' v='veggie' d=true
+                +date_edit k='date' l='date' d=1
+                +text_edit k='notes' l='notes' d=1
+                +key_value_edit k='tiffen_type' v='meat' d=1
+                +key_value_edit k='tiffen_type' v='veggie' d=1
                 .ui.green.button.submit_order
                     |submit order
             else
-                +date_view k='date' l='date' d=true
-                +text_view k='notes' l='notes' d=true
+                +date_view k='date' l='date' d=1
+                +text_view k='notes' l='notes' d=1
                 .ui.large.label
                     |tiffen type: #{tiffen_type}
-                +boolean_edit k='delivery' l='add delivery' d=true                    
+                +boolean_edit k='delivery' l='add delivery' d=1                    
         if is_dev
             +remove_button
             +print_this
@@ -454,7 +453,7 @@ template(name='user_edit_finance')
                         .ui.header
                             i.shield.icon
                             |admin 
-                        +number_edit k='credit' l='edit credit' d=true
+                        +number_edit k='credit' l='edit credit' d=1
 
 
 template(name='user_edit_delivery')
@@ -470,16 +469,16 @@ template(name='user_edit_delivery')
             .sixteen.wide.column
                 .ui.header home address
                 .ui.small.header will only be shown to deliveries to your address and to match you to deliveries nearby
-                +text_edit k='address' d=true
-                +text_edit k='city' d=true
-                +number_edit k='zipcode' d=true
-                +array_edit k='location_tags' l='location tags' d=true
-                +multi_user_edit k='approved_drivers' l='approved drivers to your address' d=true
+                +text_edit k='address' d=1
+                +text_edit k='city' d=1
+                +number_edit k='zipcode' d=1
+                +array_edit k='location_tags' l='location tags' d=1
+                +multi_user_edit k='approved_drivers' l='approved drivers to your address' d=1
                 // +address_edit k='home_address'
                 .ui.header driver settings
-                +boolean_edit k='available_for_delivery' l='available for delivery' d=true
+                +boolean_edit k='available_for_delivery' l='available for delivery' d=1
                 if available_for_delivery
-                    +array_edit k='prefered_zipcodes' l='prefered zipcodes' d=true
+                    +array_edit k='prefered_zipcodes' l='prefered zipcodes' d=1
                 each deliveries
                     +delivery
 
@@ -493,17 +492,17 @@ template(name='delivery')
         .ui.header $#{charge.result.amount}
         if can_edit 
             unless submitted
-                +date_edit k='date' l='date' d=true
-                +text_edit k='notes' l='notes' d=true
-                +key_value_edit k='tiffen_type' v='meat' d=true
-                +key_value_edit k='tiffen_type' v='veggie' d=true
+                +date_edit k='date' l='date' d=1
+                +text_edit k='notes' l='notes' d=1
+                +key_value_edit k='tiffen_type' v='meat' d=1
+                +key_value_edit k='tiffen_type' v='veggie' d=1
                 .ui.green.button.submit_order
                     |submit order
             else
-                +date_view k='date' l='date' d=true
-                +text_view k='notes' l='notes' d=true
-                +key_value_view k='tiffen_type' v='meat' d=true
-                +key_value_view k='tiffen_type' v='veggie' d=true
+                +date_view k='date' l='date' d=1
+                +text_view k='notes' l='notes' d=1
+                +key_value_view k='tiffen_type' v='meat' d=1
+                +key_value_view k='tiffen_type' v='veggie' d=1
         if is_dev
             +remove_button
             +print_this
